Run tidy docker as travis user

--- a/.github/workflows/tidy.yml
+++ b/.github/workflows/tidy.yml
@@ -19,9 +19,8 @@ jobs:
       working-directory: ${{runner.workspace}}/pisa/test/docker/tidy
       shell: bash
       run: |
-          docker build . -t tidy-image
-          docker run --name tidy -v ${{runner.workspace}}/pisa:/pisa -d --rm -it tidy-image
-          docker exec tidy bash -c "ls -d /pisa/external/*/ | xargs -I{} git config --global --add safe.directory {}"
+          docker build --build-arg USR=travis . -t tidy-image
+          docker run -u travis --name tidy -v ${{runner.workspace}}/pisa:/pisa -d --rm -it tidy-image
 
     - name: Create Build Environment
       shell: bash
