--- a/.github/workflows/tidy.yml
+++ b/.github/workflows/tidy.yml
@@ -24,12 +24,12 @@ jobs:
 
     - name: Create Build Environment
       shell: bash
-      run: docker exec tidy cmake -E make_directory /build
+      run: docker exec tidy cmake -E make_directory /home/travis/build
 
     - name: Configure
       shell: bash
-      run: docker exec -w /build tidy cmake /pisa -DCMAKE_BUILD_TYPE=Debug -DPISA_BUILD_TOOLS=ON -DPISA_ENABLE_CLANG_TIDY=ON -DCMAKE_TOOLCHAIN_FILE=clang.cmake -DPISA_CLANG_TIDY_EXECUTABLE=clang-tidy -DPISA_CI_BUILD=ON
+      run: docker exec -w /home/travis/build tidy cmake /pisa -DCMAKE_BUILD_TYPE=Debug -DPISA_BUILD_TOOLS=ON -DPISA_ENABLE_CLANG_TIDY=ON -DCMAKE_TOOLCHAIN_FILE=clang.cmake -DPISA_CLANG_TIDY_EXECUTABLE=clang-tidy -DPISA_CI_BUILD=ON
 
     - name: Build
       shell: bash
-      run: docker exec -w /build tidy cmake --build . --config Debug -- -j 4
+      run: docker exec -w /home/travis/build tidy cmake --build . --config Debug -- -j 4
