--- a/test/docker/clang11/Dockerfile
+++ b/test/docker/clang11/Dockerfile
@@ -1,12 +1,19 @@
 FROM silkeh/clang:11
 
-ENV PISA_SRC="/pisa"
+ENV TOOLCHAIN="-DCMAKE_TOOLCHAIN_FILE=clang.cmake"
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=America/New_York
 
-ENV TOOLCHAIN="-DCMAKE_TOOLCHAIN_FILE=clang.cmake"
+RUN apt-get update -y && apt-get install -y --no-install-recommends \
+    cmake=3.18.* \
+    libtool=2.4.* \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
-WORKDIR $PISA_SRC
+COPY . /pisa
+RUN mkdir /pisa/build
+WORKDIR /pisa/build
+RUN cmake -DCMAKE_BUILD_TYPE='Debug' -DPISA_BUILD_TOOLS='OFF' -DCMAKE_TOOLCHAIN_FILE='clang.cmake' .. \
+    && cmake --build . --config Debug -- -j 4
 
-RUN apt-get update -y
-RUN apt-get install -y cmake libtool
+CMD ["ctest", "-VV", "-j", "4"]
