--- a/test/docker/gcc11/Dockerfile
+++ b/test/docker/gcc11/Dockerfile
@@ -1,10 +1,17 @@
 FROM gcc:11
 
-ENV PISA_SRC="/pisa"
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=America/New_York
 
-WORKDIR $PISA_SRC
+RUN apt-get update -y && apt-get install -y --no-install-recommends \
+    cmake=3.18.* \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
-RUN apt-get update -y
-RUN apt-get install -y cmake
+COPY . /pisa
+RUN mkdir /pisa/build
+WORKDIR /pisa/build
+RUN cmake "-DCMAKE_BUILD_TYPE=Debug" "-DPISA_BUILD_TOOLS=OFF" .. \
+    && cmake --build . --config Debug -- -j 4
+
+CMD ["ctest", "-VV", "-j", "4"]
