--- a/.github/workflows/headers.yml
+++ b/.github/workflows/headers.yml
@@ -16,16 +16,5 @@ jobs:
         submodules: true
 
     - name: Bulid docker image
-      working-directory: ${{runner.workspace}}/pisa/test/docker/gcc11
       shell: bash
-      run: |
-          docker build . -t test-image
-          docker run --name test -v ${{runner.workspace}}/pisa:/pisa -d --rm -it test-image
-
-    - name: Create Build Environment
-      shell: bash
-      run: docker exec test cmake -E make_directory /pisa/build
-
-    - name: Configure
-      shell: bash
-      run: docker exec -w /pisa/build test cmake /pisa/build -DCMAKE_BUILD_TYPE=Debug -DPISA_COMPILE_HEADERS=On -DPISA_CI_BUILD=ON ..
+      run: docker build -t pisa -f- . < "${{runner.workspace}}/pisa/test/docker/headers/Dockerfile"
