Custom sift down for binary heap
The previous solution where we swap first and last elements of the heap
and call `pop_heap` is incorrect according to the standard, and fails
when compiled with libc++ 15. Calling `push_heap` in addition to
`pop_heap` is less efficient; in fact, the custom sift down solution is
more efficient than the previous implementation (according to the
microbenchmarks).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ option(PISA_CLANG_TIDY_EXECUTABLE "clang-tidy executable path" "clang-tidy")
 option(PISA_USE_PIC "Enable Position-Independent code globally" ON)
 option(PISA_CI_BUILD "Remove debug information from Debug build" OFF)
 
-option(PISA_SYSTEM_GOOGLE_BENCHMARK "Use system installation of Google benchmark library" ON)
+option(PISA_SYSTEM_GOOGLE_BENCHMARK "Use system installation of Google benchmark library" OFF)
 
 if(PISA_USE_PIC)
     set(CMAKE_POSITION_INDEPENDENT_CODE ON)
