Add google benchmark submodule

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -99,3 +99,8 @@ set(TAILY_ENABLE_TESTING OFF CACHE BOOL "skip taily testing")
 set(TAILY_BUILD_EXAMPLE OFF CACHE BOOL "skip taily example")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/taily)
 target_compile_options(taily INTERFACE -Wno-unused-variable)
+
+if (PISA_ENABLE_TESTING AND NOT PISA_SYSTEM_GOOGLE_BENCHMARK)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/benchmark)
+    target_compile_options(benchmark::benchmark PRIVATE -Wno-error=all -Wno-unused-but-set-variable)
+endif()
