--- a/test/docker/clang11/Dockerfile
+++ b/test/docker/clang11/Dockerfile
@@ -13,7 +13,12 @@ RUN apt-get update -y && apt-get install -y --no-install-recommends \
 COPY . /pisa
 RUN mkdir /pisa/build
 WORKDIR /pisa/build
-RUN cmake -DCMAKE_BUILD_TYPE='Debug' -DPISA_BUILD_TOOLS='OFF' -DCMAKE_TOOLCHAIN_FILE='clang.cmake' .. \
+RUN cmake \
+    -DCMAKE_BUILD_TYPE='Debug' \
+    -DPISA_BUILD_TOOLS='OFF' \
+    -DPISA_ENABLE_BENCHMARKING='OFF' \
+    -DCMAKE_TOOLCHAIN_FILE='clang.cmake' \
+    .. \
     && cmake --build . --config Debug -- -j 4
 
 CMD ["ctest", "-VV", "-j", "4"]
