--- a/test/docker/gcc10/Dockerfile
+++ b/test/docker/gcc10/Dockerfile
@@ -3,15 +3,16 @@ FROM gcc:10
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=America/New_York
 
-RUN apt-get update -y && apt-get install -y --no-install-recommends \
-    cmake=3.13.* \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
-
 COPY . /pisa
+RUN ./pisa/test/docker/install-cmake.sh
+
 RUN mkdir /pisa/build
 WORKDIR /pisa/build
-RUN cmake "-DCMAKE_BUILD_TYPE=Debug" "-DPISA_BUILD_TOOLS=OFF" .. \
+RUN cmake \
+    "-DCMAKE_BUILD_TYPE=Debug" \
+    "-DPISA_BUILD_TOOLS=OFF" \
+    "-DPISA_ENABLE_BENCHMARKING=OFF" \
+    .. \
     && cmake --build . --config Debug -- -j 4
 
 CMD ["ctest", "-VV", "-j", "4"]
