--- a/test/docker/gcc12/Dockerfile
+++ b/test/docker/gcc12/Dockerfile
@@ -1,17 +1,21 @@
 FROM gcc:12
 
+ARG CXX_STANDARD=17
+
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=America/New_York
 
-RUN apt-get update -y && apt-get install -y --no-install-recommends \
-    cmake=3.18.* \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
-
 COPY . /pisa
+RUN ./pisa/test/docker/install-cmake.sh
+
 RUN mkdir /pisa/build
 WORKDIR /pisa/build
-RUN cmake "-DCMAKE_BUILD_TYPE=Debug" "-DPISA_BUILD_TOOLS=OFF" .. \
+RUN cmake \
+    "-DCMAKE_BUILD_TYPE=Debug" \
+    "-DPISA_BUILD_TOOLS=OFF" \
+    "-DPISA_ENABLE_BENCHMARKING=OFF" \
+    "-DCMAKE_CXX_STANDARD=$CXX_STANDARD" \
+    .. \
     && cmake --build . --config Debug -- -j 4
 
 CMD ["ctest", "-VV", "-j", "4"]
