--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,10 +11,12 @@ jobs:
     runs-on: ubuntu-18.04
     strategy:
       matrix:
-        compiler: [gcc9, gcc10, gcc11, gcc12, clang11]
+        compiler: [gcc9, gcc10, gcc11, gcc12, clang11, clang12]
         standard: [17]
         include:
           - compiler: gcc12 # Extra test for C++20
+            standard: 20
+          - compiler: clang12 # Extra test for C++20
             standard: 20
 
     steps:
