--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,23 +1,16 @@
-name: Test Linux
+name: Pull Request
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
     branches: [ master ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-18.04
     strategy:
       matrix:
-        compiler: [gcc9, gcc10, gcc11, gcc12, clang11, clang12]
-        standard: [17]
-        include:
-          - compiler: gcc12 # Extra test for C++20
-            standard: 20
-          - compiler: clang12 # Extra test for C++20
-            standard: 20
+        compiler: [gcc12, clang12]
+        standard: [17, 20]
 
     steps:
     - uses: actions/checkout@v2
