Update test Docker images for Clang
Using debian:bullseye for base, and installing clang manually, to have
more control over it.

Also removing Clang 11 and adding Clang 15 build.

--- a/test/docker/clang12/Dockerfile
+++ b/test/docker/clang12/Dockerfile
@@ -1,25 +1,21 @@
-FROM silkeh/clang:12
+FROM debian:bullseye
 
 ARG CXX_STANDARD=17
+ARG DEBIAN_FRONTEND=noninteractive
 
-ENV TOOLCHAIN="-DCMAKE_TOOLCHAIN_FILE=clang.cmake"
-ENV DEBIAN_FRONTEND=noninteractive
-ENV TZ=America/New_York
-
-RUN apt-get update -y && apt-get install -y --no-install-recommends \
-    cmake=3.18.* \
-    libtool=2.4.* \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+COPY /test/docker/install-clang.sh /
+RUN /install-clang.sh 12
 
 COPY . /pisa
 RUN mkdir /pisa/build
 WORKDIR /pisa/build
+
 RUN cmake \
     -DCMAKE_BUILD_TYPE='Debug' \
     -DPISA_BUILD_TOOLS='OFF' \
     -DPISA_ENABLE_BENCHMARKING='OFF' \
     -DCMAKE_TOOLCHAIN_FILE='clang.cmake' \
+    "-DCMAKE_CXX_STANDARD=$CXX_STANDARD" \
     .. \
     && cmake --build . --config Debug -- -j 4
 
