--- a/test/docker/clang15/Dockerfile
+++ b/test/docker/clang15/Dockerfile
@@ -1,22 +1,22 @@
-FROM silkeh/clang:15-bullseye
+FROM debian:bullseye
 
-ENV TOOLCHAIN="-DCMAKE_TOOLCHAIN_FILE=clang.cmake"
-ENV DEBIAN_FRONTEND=noninteractive
-ENV TZ=America/New_York
+ARG CXX_STANDARD=17
+ARG DEBIAN_FRONTEND=noninteractive
 
-RUN apt-get update -y && apt-get install -y --no-install-recommends \
-    cmake=3.18.* \
-    libtool=2.4.* \
-    libc++-15-dev=1:15.* \
-    libc++abi-15-dev=1:15.* \
-    git=1:2.* \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+COPY /test/docker/install-clang.sh /
+RUN /install-clang.sh 15
 
 COPY . /pisa
 RUN mkdir /pisa/build
 WORKDIR /pisa/build
-RUN cmake -DCMAKE_BUILD_TYPE='Debug' -DPISA_BUILD_TOOLS='OFF' -DCMAKE_TOOLCHAIN_FILE='clang.cmake' .. \
+
+RUN cmake \
+    -DCMAKE_BUILD_TYPE='Debug' \
+    -DPISA_BUILD_TOOLS='OFF' \
+    -DPISA_ENABLE_BENCHMARKING='OFF' \
+    -DCMAKE_TOOLCHAIN_FILE='clang.cmake' \
+    "-DCMAKE_CXX_STANDARD=$CXX_STANDARD" \
+    .. \
     && cmake --build . --config Debug -- -j 4
 
 CMD ["ctest", "-VV", "-j", "4"]
