--- a/test/docker/gcc11/Dockerfile
+++ b/test/docker/gcc11/Dockerfile
@@ -1,5 +1,8 @@
 FROM gcc:11
 
+ARG CXX_STANDARD=17
+ARG USE_SANITIZERS=OFF
+
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=America/New_York
 
@@ -12,6 +15,8 @@ RUN cmake \
     "-DCMAKE_BUILD_TYPE=Debug" \
     "-DPISA_BUILD_TOOLS=OFF" \
     "-DPISA_ENABLE_BENCHMARKING=OFF" \
+    "-DUSE_SANITIZERS=$USE_SANITIZERS" \
+    "-DCMAKE_CXX_STANDARD=$CXX_STANDARD" \
     .. \
     && cmake --build . --config Debug -- -j 4
 
