Add option to use system Boost
The version we're pulling from a submodule is now quite old (1.67), and
it doesn't seem that this repository supports any newer ones. We should
consider changing how we're installing it. In the meantime, it is a good
idea to have the option to use the system installation instead.

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -49,9 +49,11 @@ add_library(simdcomp STATIC ${CMAKE_CURRENT_SOURCE_DIR}/simdcomp/src/simdbitpack
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/GSL EXCLUDE_FROM_ALL)
 
 # Add Boost
-add_subdirectory(boost-cmake)
-set(BOOST_INCLUDEDIR ${CMAKE_CURRENT_SOURCE_DIR}/boost-cmake CACHE PATH "Change boost lookup path")
-set(BOOST_LIBRARYDIR ${CMAKE_BINARY_DIR}/boost-cmake CACHE PATH "Change boost lookup path")
+if (NOT PISA_SYSTEM_BOOST)
+    add_subdirectory(boost-cmake)
+    set(BOOST_INCLUDEDIR ${CMAKE_CURRENT_SOURCE_DIR}/boost-cmake CACHE PATH "Change boost lookup path")
+    set(BOOST_LIBRARYDIR ${CMAKE_BINARY_DIR}/boost-cmake CACHE PATH "Change boost lookup path")
+endif()
 
 # Add Catch
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Catch2)
