Update TBB to the newest version of oneTBB
TBB is now part of Intel's oneAPI. The dependency is now brought in as
external submodule but the system installation can also be used to build
PISA.

--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "external/benchmark"]
 	path = external/benchmark
 	url = https://github.com/google/benchmark.git
+[submodule "external/oneTBB"]
+	path = external/oneTBB
+	url = https://github.com/oneapi-src/oneTBB.git
