--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -9,11 +9,11 @@ jobs:
     runs-on: ubuntu-18.04
     strategy:
       matrix:
-        compiler: [gcc9, gcc10, gcc11, gcc12, clang12, clang15]
+        compiler: [gcc9, gcc10, gcc11, gcc12, gcc13, clang12, clang15]
         standard: [17]
         sanitizers: [OFF]
         include:
-          - compiler: gcc12   # Extra test for C++20
+          - compiler: gcc13   # Extra test for C++20
             standard: 20
           - compiler: clang15 # Extra test for C++20
             standard: 20
