--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -76,6 +76,9 @@ target_link_libraries(taily-thresholds app CLI11)
 add_executable(extract-maxscores extract_maxscores.cpp)
 target_link_libraries(extract-maxscores app CLI11)
 
+add_executable(serve serve.cpp)
+target_link_libraries(serve app CLI11)
+
 if (PISA_ENABLE_TESTING AND BUILD_TESTING)
     add_subdirectory(tests)
 endif()
