Add byte padding to block index after postings
QMX can call SIMD reads with the address of the last byte in a block,
which causes undefined behavior (read after buffer) if it happens at the
end of the index memory. This commit adds 15 bytes at the very end of
the index to avoid UB. Also, block codecs tests are adapted so that we
always have 15-byte padding for QMX.

--- a/test/docker/clang15/Dockerfile
+++ b/test/docker/clang15/Dockerfile
@@ -21,7 +21,7 @@ RUN cmake \
     -DPISA_ENABLE_BENCHMARKING='OFF' \
     -DPISA_SYSTEM_BOOST='ON' \
     -DCMAKE_TOOLCHAIN_FILE='clang.cmake' \
-    "-DUSE_SANITIZERS=$USE_SANITIZERS" \
+    "-DPISA_SANITIZERS=$USE_SANITIZERS" \
     "-DCMAKE_CXX_STANDARD=$CXX_STANDARD" \
     .. \
     && cmake --build . --config Debug -- -j 4
