--- a/test/docker/clang16/Dockerfile
+++ b/test/docker/clang16/Dockerfile
@@ -21,7 +21,7 @@ RUN cmake \
     -DPISA_ENABLE_BENCHMARKING='OFF' \
     -DPISA_SYSTEM_BOOST='ON' \
     -DCMAKE_TOOLCHAIN_FILE='clang.cmake' \
-    "-DUSE_SANITIZERS=$USE_SANITIZERS" \
+    "-DPISA_SANITIZERS=$USE_SANITIZERS" \
     "-DCMAKE_CXX_STANDARD=$CXX_STANDARD" \
     .. \
     && cmake --build . --config Debug -- -j 4
