--- a/test/docker/gcc11/Dockerfile
+++ b/test/docker/gcc11/Dockerfile
@@ -15,7 +15,7 @@ RUN cmake \
     "-DCMAKE_BUILD_TYPE=Debug" \
     "-DPISA_BUILD_TOOLS=OFF" \
     "-DPISA_ENABLE_BENCHMARKING=OFF" \
-    "-DUSE_SANITIZERS=$USE_SANITIZERS" \
+    "-DPISA_SANITIZERS=$USE_SANITIZERS" \
     "-DCMAKE_CXX_STANDARD=$CXX_STANDARD" \
     .. \
     && cmake --build . --config Debug -- -j 4
