--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -8,8 +8,10 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/FastPFor EXCLUDE_FROM_ALL)
 target_compile_options(FastPFor PRIVATE -Wno-cast-align)
 
 # Add CLI11
-set(CLI11_TESTING OFF CACHE BOOL "skip trecpp testing")
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/CLI11 EXCLUDE_FROM_ALL)
+if (NOT PISA_SYSTEM_CLI11 AND PISA_BUILD_TOOLS)
+    set(CLI11_TESTING OFF CACHE BOOL "skip trecpp testing")
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/CLI11 EXCLUDE_FROM_ALL)
+endif()
 
 # Add streamvbyte
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/streamvbyte/include)
