--- a/test/docker/gcc13/Dockerfile
+++ b/test/docker/gcc13/Dockerfile
@@ -2,6 +2,7 @@ FROM gcc:13
 
 ARG CXX_STANDARD=17
 ARG USE_SANITIZERS=OFF
+ARG BUILD_TYPE=Debug
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=America/New_York
@@ -12,7 +13,7 @@ RUN ./pisa/test/docker/install-cmake.sh
 RUN mkdir /pisa/build
 WORKDIR /pisa/build
 RUN cmake \
-    "-DCMAKE_BUILD_TYPE=Debug" \
+    "-DCMAKE_BUILD_TYPE=$BUILD_TYPE" \
     "-DPISA_BUILD_TOOLS=OFF" \
     "-DPISA_ENABLE_BENCHMARKING=OFF" \
     "-DPISA_SANITIZERS=$USE_SANITIZERS" \
