--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -17,7 +17,7 @@ jobs:
           - compiler: gcc13   # Extra test for C++20
             standard: 20
           - compiler: gcc13   # Extra test for Release
-            standard: Release
+            build_type: Release
           - compiler: clang16 # Extra test for C++20
             standard: 20
             sanitizers: ON    # Also run with sanitizers
