Install deps for system-deps CI build

--- a/test/docker/system-deps/Dockerfile
+++ b/test/docker/system-deps/Dockerfile
@@ -5,6 +5,19 @@ ARG CXX_STANDARD=17
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=America/New_York
 
+RUN wget -O- https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB \
+    | gpg --dearmor | tee /usr/share/keyrings/oneapi-archive-keyring.gpg > /dev/null
+
+RUN echo "deb [signed-by=/usr/share/keyrings/oneapi-archive-keyring.gpg] https://apt.repos.intel.com/oneapi all main" \
+    | tee /etc/apt/sources.list.d/oneAPI.list
+
+RUN apt-get -y update \
+    && apt-get install -y \
+    libbenchmark-dev \
+    libboost-dev \
+    intel-oneapi-tbb-devel \
+    libcli11-dev
+
 COPY . /pisa
 RUN ./pisa/test/docker/install-cmake.sh
 
