Use pip to install clang-format

--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -100,7 +100,7 @@ jobs:
     - name: Install clang-format
       shell: bash
       run: |
-          sudo apt-get install -y clang-format
+          sudo pip install clang-format
 
     - name: Set up Python
       uses: actions/setup-python@v1
