--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -2,7 +2,7 @@ name: Trunk
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   test:
@@ -11,16 +11,12 @@ jobs:
       matrix:
         compiler: [gcc10, gcc11, gcc12, gcc13, clang15, clang16]
         build_type: [Debug]
-        standard: [17]
         sanitizers: [OFF]
         include:
-          - compiler: gcc13   # Extra test for C++20
-            standard: 20
           - compiler: gcc13   # Extra test for Release
             build_type: Release
-          - compiler: clang16 # Extra test for C++20
-            standard: 20
-            sanitizers: ON    # Also run with sanitizers
+          - compiler: clang16 # Extra test with sanitizers
+            sanitizers: ON
 
     steps:
     - uses: actions/checkout@v2
@@ -31,7 +27,6 @@ jobs:
       shell: bash
       run: |
         docker build \
-          --build-arg CXX_STANDARD=${{matrix.standard}} \
           --build-arg USE_SANITIZERS=${{matrix.sanitizers}} \
           -t pisa -f- . < "${{runner.workspace}}/pisa/test/docker/${{matrix.compiler}}/Dockerfile"
 
