--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -35,7 +35,7 @@ jobs:
       run: docker run pisa ctest -VV -j 4
 
   mac_tests:
-    runs-on: ${{ matrix.os }}
+    runs-on: macos-13
     strategy:
       matrix:
         name: [macos-xcode-13.2]
@@ -51,11 +51,10 @@ jobs:
       if: runner.os == 'macOS'
       run: |
           brew install autoconf automake libtool cmake
-          sudo xcode-select -switch /Applications/Xcode_${{ matrix.version }}.app
-          echo "CC=$(xcrun -f clang)" >> $GITHUB_ENV
-          echo "CXX=$(xcrun -f clang++)" >> $GITHUB_ENV
-          echo "SDKROOT=$(xcodebuild -version -sdk macosx Path)" >> $GITHUB_ENV
-          echo "PATH=$(dirname $(xcrun -f clang)):$PATH" >> $GITHUB_ENV
+
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: '14.3.1'
 
     - name: Create Build Environment
       shell: bash
