Feature: JSON document format
Support JSONL collection format. This should make it easy to prepare a
script that transforms any format into JSON and streams it to the
parsing tool.

Signed-off-by: Michal Siedlaczek <michal@siedlaczek.me>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,6 +145,7 @@ target_link_libraries(pisa
         warcpp
         wapopp
         trecpp
+        nlohmann_json::nlohmann_json
 )
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
     if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
