Feature: `ir-datasets` script
The script utilizes `ir-datasets` to download a dataset and prints it
out in a format that can be understood by `parse_collection`.

Signed-off-by: Michal Siedlaczek <michal@siedlaczek.me>

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -33,3 +33,5 @@ add_tool(taily-stats taily_stats.cpp)
 add_tool(taily-thresholds taily_thresholds.cpp)
 add_tool(extract-maxscores extract_maxscores.cpp)
 add_tool(lookup-table lookup_table.cpp)
+
+configure_file(../script/ir-datasets.py ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/ir-datasets COPYONLY)
