--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        submodules: true
+        submodules: recursive
 
     - name: Bulid docker image
       shell: bash
@@ -40,7 +40,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        submodules: true
+        submodules: recursive
 
     - name: Bulid docker image
       shell: bash
@@ -52,7 +52,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        submodules: true
+        submodules: recursive
 
     - name: Bulid docker image
       shell: bash
